# Roboboat-2020

./: .gitignore  frames.gv
src/bluedragon_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
src/bluedragon_description/: CMakeLists.txt  package.xml
src/bluedragon_description/launch/: boot(copy).launch  boot.launch  ekf (copy).launch  ekf.launch  ekf_2.launch  gps.launch  lidar.launch  navigation.launch  netcomm.launch  propulsion.launch  razor.launch  rosbag.launch  simulation.launch  ultrasound.launch  zed.launch
src/bluedragon_description/msg/: temperature.msg
src/bluedragon_description/urdf/: bluedragon (3rd copy).urdf  bluedragon (5th copy).urdf  bluedragon (6th copy).urdf  bluedragon (another copy).urdf  bluedragon (copy).urdf  bluedragon.urdf  bluedragon4.urdf
src/bluedragon_netcomm/: CMakeLists.txt
src/bluedragon_netcomm/include/bluedragon_netcomm/: hermes.h  listener.h  priapus.h
src/bluedragon_netcomm/launch/: netcomm.launch  netcomm_receive.launch
src/bluedragon_netcomm/msg/: serial_size.msg
src/bluedragon_netcomm/src/: netcomm.cpp  netcomm_receiver.cpp
src/bluedragon_propulsion/: CMakeLists.txt
src/bluedragon_propulsion/include/bluedragon_propulsion/: listener.h
src/bluedragon_propulsion/launch/: propulsion.launch
src/bluedragon_propulsion/msg/: propulsion.msg
src/bluedragon_propulsion/src/: propulsion.cpp
src/buoy_identifier/: CMakeLists.txt  package.xml
src/buoy_identifier/msg/: Buoy.msg
src/buoy_identifier/src/: main.cpp  navigator.cpp
src/buoy_identifier/src/reference/: Even more code  More code  opencv template
src/using_markers/: CMakeLists.txt  package.xml
